v1.3.1 - RAG 检索优化与响应速度提升 🚀 核心升级：重构知识检索架构，优化中文分词，提升插件响应速度！
🎯 知识检索优化
✅ 标准 RAG 方案：业界通用的知识检索架构，支持多格式知识库文件
✅ 智能分段策略：Markdown 标题分割 → 段落分割 → 固定大小分割
✅ 中文关键词提取优化：n-gram 分词 + 智能停用词过滤 + 标点自动移除
✅ 多级评分机制：完整问题匹配 (+50) + 关键词匹配 (+5) + 标题匹配 (+25) + 覆盖率加成
✅ 缓存优化：首次分段后缓存，二次检索速度提升 ~70%
⚡ 响应速度优化
✅ Thinking 消息即时发送：从技能执行内部提前到命令入口，消除"插件反应慢"的误解
✅ 冷却时间统一管理：统一在 handlePlayerMessageCommand() 中处理，避免重复启动冷却
✅ 代码架构优化：职责分离，所有分支复用统一的入口处理
🔧 技术细节
✅ 知识库检索器重构：重新实现标准的 RAG 检索流程
✅ 配置系统完善：知识库分段配置化 (knowledge.segment) + 人格配置 YAML 多行文本支持
✅ 调试日志优化：输出详细的分词过程和匹配详情
⚙️ API 性能优化（DeepSeekAPINew）
✅ HTTP 连接池优化：复用连接，最大空闲连接数=10，保持时间=5 分钟
✅ 超时配置优化：连接=30s, 读取=60s, 写入=30s
✅ 流式读取响应：降低首字延迟，使用 BufferedReader 逐行读取
✅ 配置缓存：缓存 model/temperature/maxTokens 等配置值，减少重复获取
✅ 预分配缓冲区：StringBuilder 预分配容量 (512/256)，减少扩容开销
✅ 自动重试机制：启用 retryOnConnectionFailure(true)